my-deploy-ru.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: my-deploy-ru
spec:
  replicas: 4
  template:
    metadata:
      name: deploy-pod-ru
      labels:
        app: deploy-app-ru
    spec:
      containers:
      - image: aamirpinger/helloworld
        name: container
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
