my-ln-exec.yaml
kind: Pod
apiVersion: v1
metadata:
 name: myapp
spec:
 containers:
 - name: myapp
   image: nginx
   ports:
   - containerPort: 80
   livenessProbe:
     exec:
       command:
       - cat
       - /tmp/healthy
