my-pod-cm-env.yaml
kind: Pod
apiVersion: v1
metadata:
 name: pod-cm-env
spec:
 containers:
 - name: configmap-container-env
   image: nginx
