my-pod-dapi.yaml
apiVersion: v1
kind: Pod
metadata:
  name: downward
spec:
  containers:
  - name: main
    image: nginx
    ports:
    - containerPort: 80
    imagePullPolicy: IfNotPresent
    resources:
      requests:
        cpu: 15m
        memory: 2Mi
      limits:
        cpu: 100m
        memory: 4Mi
