my-svc-ext-name.yaml
apiVersion: v1
kind: Service
metadata:
 labels:
   app: myapp
 name: my-svc
spec:
 ports:
 - port: 8000
   targetPort: 80
 selector:
   app: myapp
 type: ExternalName
 externalName: myapp.mydomain.com
