my-svc.yaml
apiVersion: v1
kind: Service
metadata:
 name: my-service
spec:
  containers:
  - name: con1
    image: nginx:alpine
 ports:
 - port: 8080
   targetPort: 80
 selector:
   app: myapp
 type: ClusterIP
